[workspace]
members = [
    "packages/rsmack-wrap",
    "packages/rsmack-edoc",
    "packages/rsmack-utils",
    "packages/rsmack-seanum",
    "packages/rsmack-fs",
    "packages/rsmack-megamac",
]
resolver = "2"
[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
wildcard-imports = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
